[package]
name = "scott65"
version = "0.1.0"
authors = ["Thorgaran <39826071+Thorgaran@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The reason we do this is because integration tests don't get cfg(test)
# See: https://github.com/rust-lang/rust/issues/45599
test = []

[dependencies]
itertools = "0.9.0"

[dev-dependencies]
w65c02s = "0.9.2"
